More small readability fixes

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -597,12 +597,20 @@ title, head {
 	color: #f2f2f2;
 }
 
+.blog-head-dark {
+	color: #111111;
+}
+
 .pagination {
 	padding-top: 3rem;
 }
 
 span .pagination-item {
 	display:none;
+}
+
+.post a {
+	text-decoration: underline;
 }
 
  /* MQ */
